# ChangeLog for dev-java/jdbc-mysql
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jdbc-mysql/ChangeLog,v 1.49 2007/06/02 21:49:43 betelgeuse Exp $

  02 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
  jdbc-mysql-3.1.13-r5.ebuild:
  Marked stable on ppc64 for bug #179939.

  02 Jun 2007; nixnut <nixnut@gentoo.org> jdbc-mysql-3.1.13-r5.ebuild:
  Stable on ppc wrt bug 179939

  31 May 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -jdbc-mysql-3.1.10.ebuild, jdbc-mysql-3.1.13-r5.ebuild:
  Stable on amd64, bug #179939. Removed older gen 1 version.

  31 May 2007; Christian Faulhammer <opfer@gentoo.org>
  jdbc-mysql-3.1.13-r5.ebuild:
  stable x86, bug 179939

  31 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  jdbc-mysql-5.0.5.ebuild, jdbc-mysql-5.0.6.ebuild:
  Drop ~ppc64 keywords because this needs dev-java/ant-contrib that isn't
  keyworded. Didn't see this because I had some local eclass modifications
  hiding it.

*jdbc-mysql-5.0.6 (18 May 2007)

  18 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +jdbc-mysql-5.0.6.ebuild:
  Version bump.

  09 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  jdbc-mysql-5.0.5.ebuild:
  Add missing DEPEND on dev-java/ant-contrib. Fixes bug #177814.

*jdbc-mysql-5.0.5 (07 May 2007)

  07 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/5.0.5-dist-target-depends.patch,
  +files/5.0.5-remove-jboss-dependency-from-tests.patch,
  +jdbc-mysql-5.0.5.ebuild:
  Version bump. Make log4j support optional via the log4j use flag. Fixes bug
  #156765. Thanks to Johan Bergström <bugs@bergstroem.nu>.

*jdbc-mysql-3.1.13-r5 (06 May 2007)

  06 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +jdbc-mysql-3.1.13-r5.ebuild:
  Drop jdbc2-stdext dependency because it's only needed with virtual/jdk-1.3
  which we don't support any more.

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  jdbc-mysql-3.1.13-r4.ebuild:
  ppc stable
