@@ -24,10 +24,6 @@ SHA256 7b99f9dfc9a4fc62edaded34ca0603f830c30dd752d1ffb7b804b3f8b6af207d files/no
 DIST mysql-connector-java-3.1.13.tar.gz 10454933 RMD160 2316969d32ce5944e4a6dc682fc29a2cf9129cf2 SHA1 09a0da29bc28b3cf0b1a78d0b3720ffdbb63073d SHA256 afa911e3999d10777fd4fb8b19c7af1330c04c927bd6fda859cd7623eb05713f
 DIST mysql-connector-java-5.0.5.tar.gz 8465846 RMD160 f96925af13a04cb82970f9a7b779bbde6ead64e2 SHA1 6feeb52816978db678cb31b6079e465584d00d23 SHA256 39ebd9423db4fa20bb7165acaf02c745f9d93ec1c5c7b693ebc26c3445f6a692
 DIST mysql-connector-java-5.0.6.tar.gz 8555883 RMD160 13aa2c228f0ffe9a44dc7089f43e128f34179f3c SHA1 336b4e86fc8d4a58d44270f400506dd03f6a4d85 SHA256 96d8dc7d0081f09a4e2c70886114acffad5aafdd3f00acb80cec36475abc91b3
-EBUILD jdbc-mysql-3.1.13-r4.ebuild 1630 RMD160 000105ad266f9a75fa70dfa75c2cbe8c67957ea4 SHA1 19de6ace8f6b458e9aa71b0b77fa778bc063bb59 SHA256 8b0eaf81db9ac075a6e2f293f7b986fb839a7310438f99744a5318996e5db24d
-MD5 0eed4d5db94423e0d78f21a4db8d8a87 jdbc-mysql-3.1.13-r4.ebuild 1630
-RMD160 000105ad266f9a75fa70dfa75c2cbe8c67957ea4 jdbc-mysql-3.1.13-r4.ebuild 1630
-SHA256 8b0eaf81db9ac075a6e2f293f7b986fb839a7310438f99744a5318996e5db24d jdbc-mysql-3.1.13-r4.ebuild 1630
 EBUILD jdbc-mysql-3.1.13-r5.ebuild 1571 RMD160 fc1bd245f4a3134211bfdb84e4a9052baaba2968 SHA1 f6b756b662114c2853f44822587472780166d0e7 SHA256 ef7a3c99a448e2d1f7cbe70417e42b4660f16dd25ae1bcce6f3f23e05ca9d4cd
 MD5 7a987b448296826f1e8af0eca923cc13 jdbc-mysql-3.1.13-r5.ebuild 1571
 RMD160 fc1bd245f4a3134211bfdb84e4a9052baaba2968 jdbc-mysql-3.1.13-r5.ebuild 1571
@@ -40,17 +36,14 @@ EBUILD jdbc-mysql-5.0.6.ebuild 1876 RMD160 9ba4ffc665576589952b5f21e625c44252f94
 MD5 782a6c9e6f976f3838b49380aa6653f5 jdbc-mysql-5.0.6.ebuild 1876
 RMD160 9ba4ffc665576589952b5f21e625c44252f94f0b jdbc-mysql-5.0.6.ebuild 1876
 SHA256 50797ea6c468c281766ac9a1992760a69a3b0e76d4caa5d3136827a088fb8265 jdbc-mysql-5.0.6.ebuild 1876
-MISC ChangeLog 10535 RMD160 c2877ff247f96e0a8eb3846416203d73b15bacbd SHA1 7cedaa72322c3e764469788eb6a4f9805cf59ab5 SHA256 2984df4d4eb10a9d47f1d39d29438796e3dfc8485d827a975a9a08f77f7e8222
-MD5 4f218358d08bdd9e62cb6cb9b0b0a6f5 ChangeLog 10535
-RMD160 c2877ff247f96e0a8eb3846416203d73b15bacbd ChangeLog 10535
-SHA256 2984df4d4eb10a9d47f1d39d29438796e3dfc8485d827a975a9a08f77f7e8222 ChangeLog 10535
+MISC ChangeLog 10657 RMD160 676f90b58ae32d29007bc59d27cd61b4b3df89a8 SHA1 57e559978d014ade884d64c451495c655c491fb0 SHA256 49af1a2275125d46d426bec17fc25414d9ac59da52dcf575f636c58cd9fc06d7
+MD5 df17bee2c19e91232f5040d9732f8864 ChangeLog 10657
+RMD160 676f90b58ae32d29007bc59d27cd61b4b3df89a8 ChangeLog 10657
+SHA256 49af1a2275125d46d426bec17fc25414d9ac59da52dcf575f636c58cd9fc06d7 ChangeLog 10657
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata.xml 157
-MD5 0b98ecbf341075a5406833bdbae31ac8 files/digest-jdbc-mysql-3.1.13-r4 289
-RMD160 c0d8b65ce73718936a300bb49f116875e278fb75 files/digest-jdbc-mysql-3.1.13-r4 289
-SHA256 850860f6a1f74e05c1555e65c965457866701d83ecfa9a0733f7b1041769ccb2 files/digest-jdbc-mysql-3.1.13-r4 289
 MD5 0b98ecbf341075a5406833bdbae31ac8 files/digest-jdbc-mysql-3.1.13-r5 289
 RMD160 c0d8b65ce73718936a300bb49f116875e278fb75 files/digest-jdbc-mysql-3.1.13-r5 289
 SHA256 850860f6a1f74e05c1555e65c965457866701d83ecfa9a0733f7b1041769ccb2 files/digest-jdbc-mysql-3.1.13-r5 289
@@ -63,7 +56,7 @@ SHA256 03e0d5790732169f67d565df1beeff7d8d1353a2e7b2ce261754999b610c5c38 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFGYeX4cxLzpIGCsLQRAl9AAJ91BMhl6LVg7EkgJl4uUkRMAfJ8RQCfV5D2
-52OR2WreTD3Rh4YoEfQGTJI=
-=2Bz3
+iD8DBQFGYeZacxLzpIGCsLQRAv+GAJ0TdNIdGNxjKnei515iI6A46ncHsACfQbqN
+0IFsqXL459SDCGpDI0HmWW4=
+=I2pU
 -----END PGP SIGNATURE-----
