@@ -1,3 +1,0 @@
-MD5 b2fc8cc8990d85629b183f284a8f46d8 mysql-connector-java-3.1.13.tar.gz 10454933
-RMD160 2316969d32ce5944e4a6dc682fc29a2cf9129cf2 mysql-connector-java-3.1.13.tar.gz 10454933
-SHA256 afa911e3999d10777fd4fb8b19c7af1330c04c927bd6fda859cd7623eb05713f mysql-connector-java-3.1.13.tar.gz 10454933
